rag基本链路实现