@@ -2,17 +2,35 @@ package com.a05.aiinterview.rag.eval;
 
 import com.a05.aiinterview.ai.dto.EvaluationDecisionOutput;
 import com.a05.aiinterview.interview.engine.DecisionExecutionPlan;
+import com.a05.aiinterview.rag.config.RagProperties;
+import com.a05.aiinterview.rag.dto.KnowledgeDocument;
+import com.a05.aiinterview.rag.dto.RagContext;
 import com.a05.aiinterview.rag.dto.RagRetrievalRequest;
+import com.a05.aiinterview.rag.service.KnowledgeIngestionService;
 import com.a05.aiinterview.rag.service.RagPlanCompiler;
+import com.a05.aiinterview.rag.service.impl.RagRetrievalServiceImpl;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import io.qdrant.client.QdrantClient;
+import io.qdrant.client.QdrantGrpcClient;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.springframework.ai.document.MetadataMode;
+import org.springframework.ai.openai.OpenAiEmbeddingModel;
+import org.springframework.ai.openai.OpenAiEmbeddingOptions;
+import org.springframework.ai.openai.api.OpenAiApi;
+import org.springframework.ai.vectorstore.VectorStore;
+import org.springframework.ai.vectorstore.qdrant.QdrantVectorStore;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Objects;
-import java.util.Set;
+import java.util.UUID;
+import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -30,6 +48,9 @@ class InterviewRagEvaluationTest {
     private static final long SINGLE_RETRIEVAL_P95_BUDGET_MS = 300L;
     private static final long END_TO_END_EXTRA_LATENCY_BUDGET_MS = 500L;
     private static final ObjectMapper MAPPER = new ObjectMapper();
+    private static final String DEFAULT_OPENAI_BASE_URL = "https://dashscope.aliyuncs.com/compatible-mode";
+    private static final String DEFAULT_EMBEDDING_MODEL = "text-embedding-v4";
+
     private final RagPlanCompiler compiler = new RagPlanCompiler();
 
     @Test
@@ -38,9 +59,11 @@ class InterviewRagEvaluationTest {
         InterviewRetrievalFixture fixture = loadFixture();
 
         assertThat(fixture.schemaVersion()).isEqualTo(1);
-        assertThat(fixture.cases()).hasSize(12);
+        assertThat(fixture.cases()).hasSizeGreaterThanOrEqualTo(14);
         assertThat(fixture.cases()).anyMatch(sample -> !sample.shouldRetrieve());
         assertThat(fixture.cases()).anyMatch(sample -> "PROJECT".equals(sample.questionType()));
+        assertThat(fixture.cases()).anyMatch(sample -> "session-83_q-215_attempt-threadlocal-cross-thread".equals(sample.traceId()));
+        assertThat(fixture.cases()).anyMatch(sample -> "session-84_q-218_attempt-generic-project-architecture".equals(sample.traceId()));
 
         for (InterviewRetrievalCase sample : fixture.cases()) {
             assertThat(sample.traceId()).isNotBlank();
@@ -70,23 +93,25 @@ class InterviewRagEvaluationTest {
     }
 
     @Test
-    @DisplayName("metric gate should keep failing until denseRecallHitRate reaches 0.6")
-    void metricGate_shouldKeepFailingUntilDenseRecallReachesThreshold() throws Exception {
+    @DisplayName("metric gate should pass once dense recall is wired to real hybrid retrieval")
+    void metricGate_shouldPassOnceDenseRecallReachesThreshold() throws Exception {
         InterviewRetrievalFixture fixture = loadFixture();
-        // Task 1 placeholder: stage hits are not wired to real retrieval yet.
-        List<SampleEvaluationResult> sampleResults = fixture.cases().stream()
-                .map(this::evaluateSample)
-                .toList();
-        EvaluationReport report = aggregate(sampleResults);
 
-        assertThat(report.routingAccuracy()).isEqualTo(1.0d);
-        assertThat(report.routeMismatchTraceIds()).isEmpty();
-        assertThat(report.retrievalApplicableHitRate()).isEqualTo(0.0d);
-        assertThat(report.mustHaveCoverage()).isEqualTo(0.0d);
-        assertThat(report.avoidPollutionRate()).isEqualTo(0.0d);
-        assertThat(report.denseRecallHitRate())
-                .withFailMessage(report.failureSummary(DENSE_RECALL_HIT_RATE_GATE))
-                .isGreaterThanOrEqualTo(DENSE_RECALL_HIT_RATE_GATE);
+        try (RealRetrievalHarness harness = RealRetrievalHarness.create(fixture.cases())) {
+            List<SampleEvaluationResult> sampleResults = fixture.cases().stream()
+                    .map(sample -> evaluateSample(sample, harness))
+                    .toList();
+            EvaluationReport report = aggregate(sampleResults);
+
+            assertThat(report.routingAccuracy()).isEqualTo(1.0d);
+            assertThat(report.routeMismatchTraceIds()).isEmpty();
+            assertThat(report.retrievalApplicableHitRate()).isGreaterThanOrEqualTo(0.8d);
+            assertThat(report.mustHaveCoverage()).isGreaterThanOrEqualTo(0.7d);
+            assertThat(report.avoidPollutionRate()).isLessThanOrEqualTo(0.2d);
+            assertThat(report.denseRecallHitRate())
+                    .withFailMessage(report.failureSummary(DENSE_RECALL_HIT_RATE_GATE))
+                    .isGreaterThanOrEqualTo(DENSE_RECALL_HIT_RATE_GATE);
+        }
     }
 
     @Test
@@ -111,24 +136,66 @@ class InterviewRagEvaluationTest {
         }
     }
 
-    private SampleEvaluationResult evaluateSample(InterviewRetrievalCase sample) {
+    @Test
+    @DisplayName("spot checks should guard against the main retrieval regressions")
+    void spotChecks_shouldGuardAgainstMainRetrievalRegressions() throws Exception {
+        InterviewRetrievalFixture fixture = loadFixture();
+
+        try (RealRetrievalHarness harness = RealRetrievalHarness.create(fixture.cases())) {
+            InterviewRetrievalCase behavioral = findCase(fixture, "session-74_q-188_attempt-a8cc71d8-3f2b-4332-b8d0-4ec32f2f28e1");
+            RagContext behavioralContext = harness.retrievalService.retrieve(compile(behavioral));
+            assertThat(behavioralContext.getRetrievedMaterials()).isNotEmpty();
+            assertThat(behavioralContext.getRetrievedMaterials().getFirst().getQuestionType()).isEqualTo("BEHAVIORAL");
+            assertThat(behavioralContext.getRetrievedMaterials())
+                    .allSatisfy(material -> {
+                        assertThat(material.getDomainCode()).isBlank();
+                        assertThat(material.getQuestionText()).doesNotContain("Redis", "Seata", "MySQL");
+                    });
+
+            InterviewRetrievalCase projectTechHook = findCase(fixture, "session-76_q-194_attempt-7c2d4e26-51e3-4c38-b5cd-3fa5d10c2d7d");
+            RagContext projectContext = harness.retrievalService.retrieve(compile(projectTechHook));
+            assertThat(projectContext.getRetrievedMaterials()).isNotEmpty();
+            assertThat(projectContext.getRetrievedMaterials().getFirst().getQuestionType()).isEqualTo("PROJECT");
+            assertThat(projectContext.getRetrievedMaterials().getFirst().getQuestionText()).contains("Seata", "XID");
+
+            InterviewRetrievalCase genericProject = findCase(fixture, "session-84_q-218_attempt-generic-project-architecture");
+            RagRetrievalRequest genericRequest = compile(genericProject);
+            assertThat(genericRequest.isShouldRetrieve()).isFalse();
+
+            InterviewRetrievalCase threadLocal = findCase(fixture, "session-83_q-215_attempt-threadlocal-cross-thread");
+            RagContext threadLocalContext = harness.retrievalService.retrieve(compile(threadLocal));
+            assertThat(threadLocalContext.getRetrievedMaterials()).isNotEmpty();
+            assertThat(threadLocalContext.getRetrievedMaterials().getFirst().getQuestionId()).isEqualTo(threadLocal.traceId());
+            assertThat(threadLocalContext.getFollowUpCandidates()).contains("threadlocal-transmittable-thread-local-001");
+            assertThat(threadLocalContext.getFollowUpCandidates()).doesNotContain(threadLocal.traceId());
+        }
+    }
+
+    private SampleEvaluationResult evaluateSample(InterviewRetrievalCase sample, RealRetrievalHarness harness) {
         RagRetrievalRequest compiled = compile(sample);
         boolean actualShouldRetrieve = compiled.isShouldRetrieve();
         boolean routingMatched = actualShouldRetrieve == sample.shouldRetrieve();
-        // Pre-integration placeholder: no real retrieval is executed in Task 1.
-        StageResult stageResult = new StageResult(
-                false,
-                false,
-                false,
-                false
-        );
-        boolean retrieved = stageResult.hasAnyHit();
-        boolean mustHaveCovered = retrieved && matchesMustHaveClues(sample);
-        boolean avoidPolluted = retrieved && false;
+        if (!actualShouldRetrieve) {
+            return new SampleEvaluationResult(
+                    sample.traceId(),
+                    false,
+                    routingMatched,
+                    new StageResult(false, false, false, false),
+                    false,
+                    false,
+                    false
+            );
+        }
+
+        StageResult stageResult = harness.evaluateStages(sample, compiled);
+        RagContext context = harness.retrievalService.retrieve(compiled);
+        boolean retrieved = containsQuestionId(context.getRetrievedMaterials(), sample.traceId());
+        boolean mustHaveCovered = hasMustHaveCoverage(context, sample);
+        boolean avoidPolluted = hasAvoidPollution(context, sample);
 
         return new SampleEvaluationResult(
                 sample.traceId(),
-                actualShouldRetrieve,
+                true,
                 routingMatched,
                 stageResult,
                 retrieved,
@@ -144,17 +211,25 @@ class InterviewRagEvaluationTest {
         assertThat(sample.retrievalPlans())
                 .as("traceId=%s should contain exactly one retrieval plan", sample.traceId())
                 .hasSize(1);
-        return sample.retrievalPlans().get(0);
+        return sample.retrievalPlans().getFirst();
     }
 
     private RagRetrievalRequest compile(InterviewRetrievalCase sample) {
         DecisionExecutionPlan plan = DecisionExecutionPlan.builder()
                 .targetQuestionType(normalizeQuestionType(sample.questionType()))
+                .targetDomainCode(inferDomainCode(sample))
                 .nextFocus(sample.focusPoint())
                 .nextItemName("PROJECT".equals(normalize(sample.questionType())) ? "样例项目" : "")
                 .retrievalPlans(toOutputPlans(sample.retrievalPlans()))
                 .build();
         return compiler.compile(plan, "JAVA_BACKEND", "FRESH_GRAD");
+    }
+
+    private InterviewRetrievalCase findCase(InterviewRetrievalFixture fixture, String traceId) {
+        return fixture.cases().stream()
+                .filter(sample -> traceId.equals(sample.traceId()))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Missing fixture case: " + traceId));
     }
 
     private List<EvaluationDecisionOutput.RetrievalPlan> toOutputPlans(List<RetrievalPlan> retrievalPlans) {
@@ -174,8 +249,35 @@ class InterviewRagEvaluationTest {
                 .toList();
     }
 
-    private boolean matchesMustHaveClues(InterviewRetrievalCase sample) {
-        return requireSingleRetrievalPlan(sample).mustHaveClues().equals(sample.mustHaveClues());
+    private boolean containsQuestionId(List<RagContext.RetrievedMaterial> materials, String expectedQuestionId) {
+        return materials.stream().anyMatch(material -> Objects.equals(expectedQuestionId, material.getQuestionId()));
+    }
+
+    private boolean hasMustHaveCoverage(RagContext context, InterviewRetrievalCase sample) {
+        return context.getRetrievedMaterials().stream()
+                .filter(material -> Objects.equals(sample.traceId(), material.getQuestionId()))
+                .findFirst()
+                .map(material -> material.getScoringKeyPoints().containsAll(sample.mustHaveClues()))
+                .orElse(false);
+    }
+
+    private boolean hasAvoidPollution(RagContext context, InterviewRetrievalCase sample) {
+        return context.getRetrievedMaterials().stream()
+                .filter(material -> !Objects.equals(sample.traceId(), material.getQuestionId()))
+                .anyMatch(material -> containsAnyClue(material.getReferenceContext(), sample.avoidClues())
+                        || containsAnyClue(material.getIntentConcept(), sample.avoidClues())
+                        || material.getScoringPitfalls().stream().anyMatch(pitfall -> containsAnyClue(pitfall, sample.avoidClues())));
+    }
+
+    private boolean containsAnyClue(String text, List<String> clues) {
+        if (text == null || text.isBlank() || clues == null || clues.isEmpty()) {
+            return false;
+        }
+        String normalizedText = text.toLowerCase(Locale.ROOT);
+        return clues.stream()
+                .filter(Objects::nonNull)
+                .map(clue -> clue.toLowerCase(Locale.ROOT))
+                .anyMatch(normalizedText::contains);
     }
 
     private EvaluationReport aggregate(List<SampleEvaluationResult> sampleResults) {
@@ -261,6 +363,35 @@ class InterviewRagEvaluationTest {
         }
     }
 
+    private String normalizeQuestionType(String questionType) {
+        String normalized = normalize(questionType);
+        return "PROJECT".equals(normalized) ? "PROJECT_DEEP_DIVE" : normalized;
+    }
+
+    private String normalize(String text) {
+        return text == null ? "" : text.trim().toUpperCase(Locale.ROOT);
+    }
+
+    private String inferDomainCode(InterviewRetrievalCase sample) {
+        String focus = (sample.focusPoint() + " " + String.join(" ", sample.expectedKeywords())).toLowerCase(Locale.ROOT);
+        if ("BEHAVIORAL".equals(normalize(sample.questionType()))) {
+            return "";
+        }
+        if (focus.contains("redis") || focus.contains("redisson") || focus.contains("缓存")) {
+            return "redis";
+        }
+        if (focus.contains("mysql") || focus.contains("innodb") || focus.contains("索引")) {
+            return "mysql";
+        }
+        if (focus.contains("hashmap") || focus.contains("java")) {
+            return "java_core";
+        }
+        if (focus.contains("mq") || focus.contains("seata") || focus.contains("xid") || focus.contains("订单")) {
+            return "distributed";
+        }
+        return "";
+    }
+
     private record InterviewRetrievalFixture(int schemaVersion, List<InterviewRetrievalCase> cases) {
     }
 
@@ -305,7 +436,6 @@ class InterviewRagEvaluationTest {
         private String failureSummary(double gate) {
             return """
                     Interview RAG evaluation gate failed
-                    stageModel=placeholder_pre_integration
                     totalSamples=%d
                     routeMismatchTraceIds=%s
                     denseRecallMissTraceIds=%s
@@ -345,17 +475,164 @@ class InterviewRagEvaluationTest {
             boolean fusionHit,
             boolean rerankHit
     ) {
-        private boolean hasAnyHit() {
-            return denseRecallHit || sparseRecallHit || fusionHit || rerankHit;
+    }
+
+    private static final class RealRetrievalHarness implements AutoCloseable {
+        private final QdrantClient qdrantClient;
+        private final String collectionName;
+        private final RagRetrievalServiceImpl retrievalService;
+
+        private RealRetrievalHarness(QdrantClient qdrantClient, String collectionName, RagRetrievalServiceImpl retrievalService) {
+            this.qdrantClient = qdrantClient;
+            this.collectionName = collectionName;
+            this.retrievalService = retrievalService;
         }
-    }
 
-    private String normalizeQuestionType(String questionType) {
-        String normalized = normalize(questionType);
-        return "PROJECT".equals(normalized) ? "PROJECT_DEEP_DIVE" : normalized;
-    }
+        private static RealRetrievalHarness create(List<InterviewRetrievalCase> cases) throws Exception {
+            String apiKey = firstNonBlank(System.getenv("AI_BAILIAN_API_KEY"), System.getenv("OPENAI_API_KEY"));
+            if (apiKey == null || apiKey.isBlank()) {
+                throw new IllegalStateException("缺少真实 Embedding 所需的 AI_BAILIAN_API_KEY / OPENAI_API_KEY");
+            }
 
-    private String normalize(String text) {
-        return text == null ? "" : text.trim().toUpperCase();
+            RagProperties properties = new RagProperties();
+            properties.setEnabled(true);
+            properties.setHost("localhost");
+            properties.setPort(6334);
+            properties.setCollectionName("interview_eval_" + UUID.randomUUID());
+            properties.setTopK(5);
+            properties.setMinScore(0.65d);
+            properties.setInitializeSchema(true);
+
+            QdrantClient qdrantClient = new QdrantClient(QdrantGrpcClient.newBuilder(
+                    properties.getHost(),
+                    properties.getPort(),
+                    false
+            ).build());
+            OpenAiApi openAiApi = OpenAiApi.builder()
+                    .baseUrl(firstNonBlank(System.getenv("OPENAI_BASE_URL"), DEFAULT_OPENAI_BASE_URL))
+                    .apiKey(apiKey)
+                    .build();
+            OpenAiEmbeddingModel embeddingModel = new OpenAiEmbeddingModel(
+                    openAiApi,
+                    MetadataMode.EMBED,
+                    OpenAiEmbeddingOptions.builder().model(DEFAULT_EMBEDDING_MODEL).build()
+            );
+            VectorStore vectorStore = QdrantVectorStore.builder(qdrantClient, embeddingModel)
+                    .collectionName(properties.getCollectionName())
+                    .initializeSchema(properties.isInitializeSchema())
+                    .build();
+            ((QdrantVectorStore) vectorStore).afterPropertiesSet();
+            new KnowledgeIngestionService(vectorStore, properties).ingest(buildDocuments(cases));
+
+            return new RealRetrievalHarness(
+                    qdrantClient,
+                    properties.getCollectionName(),
+                    new RagRetrievalServiceImpl(vectorStore, qdrantClient, properties)
+            );
+        }
+
+        private StageResult evaluateStages(InterviewRetrievalCase sample, RagRetrievalRequest request) {
+            @SuppressWarnings("unchecked")
+            List<Object> denseCandidates = (List<Object>) ReflectionTestUtils.invokeMethod(retrievalService, "denseRecall", request);
+            @SuppressWarnings("unchecked")
+            List<Object> sparseCandidates = (List<Object>) ReflectionTestUtils.invokeMethod(retrievalService, "sparseRecall", request);
+            @SuppressWarnings("unchecked")
+            java.util.Map<String, Object> fusedCandidates = (java.util.Map<String, Object>) ReflectionTestUtils.invokeMethod(
+                    retrievalService,
+                    "fuseByRrf",
+                    denseCandidates,
+                    sparseCandidates
+            );
+            @SuppressWarnings("unchecked")
+            List<Object> rerankedCandidates = (List<Object>) ReflectionTestUtils.invokeMethod(
+                    retrievalService,
+                    "rerank",
+                    fusedCandidates.values(),
+                    request
+            );
+
+            return new StageResult(
+                    containsQuestionId(denseCandidates, sample.traceId()),
+                    containsQuestionId(sparseCandidates, sample.traceId()),
+                    containsQuestionId(fusedCandidates.values(), sample.traceId()),
+                    containsQuestionId(rerankedCandidates, sample.traceId())
+            );
+        }
+
+        private static boolean containsQuestionId(Collection<?> candidates, String expectedQuestionId) {
+            return candidates.stream()
+                    .map(candidate -> (String) ReflectionTestUtils.getField(candidate, "questionId"))
+                    .anyMatch(expectedQuestionId::equals);
+        }
+
+        private static List<KnowledgeDocument> buildDocuments(List<InterviewRetrievalCase> cases) {
+            List<KnowledgeDocument> documents = new ArrayList<>();
+            for (InterviewRetrievalCase sample : cases) {
+                if (!sample.shouldRetrieve()) {
+                    continue;
+                }
+                RetrievalPlan retrievalPlan = sample.retrievalPlans().getFirst();
+                documents.add(KnowledgeDocument.builder()
+                        .id(sample.traceId())
+                        .questionText(firstNonBlank(retrievalPlan.displayQuery(), sample.focusPoint()))
+                        .intentConcept(firstNonBlank(retrievalPlan.goal(), sample.focusPoint()))
+                        .referenceContext(firstNonBlank(retrievalPlan.queryText(), sample.focusPoint()))
+                        .scoringKeyPoints(sample.mustHaveClues())
+                        .scoringPitfalls(sample.avoidClues())
+                        .followUpIds(sample.expectedFollowUpIds())
+                        .domainCode(inferDomainCodeStatic(sample))
+                        .questionType(normalizeQuestionTypeStatic(sample.questionType()))
+                        .difficulty(firstNonBlank(sample.difficultyHint(), "L3"))
+                        .keywords(sample.expectedKeywords())
+                        .source("rag_eval")
+                        .active(true)
+                        .version("eval-v1")
+                        .build());
+            }
+            return documents;
+        }
+
+        private static String normalizeQuestionTypeStatic(String questionType) {
+            return "PROJECT".equalsIgnoreCase(questionType) ? "PROJECT" : questionType.trim().toUpperCase(Locale.ROOT);
+        }
+
+        private static String inferDomainCodeStatic(InterviewRetrievalCase sample) {
+            String focus = (sample.focusPoint() + " " + String.join(" ", sample.expectedKeywords())).toLowerCase(Locale.ROOT);
+            if ("BEHAVIORAL".equals(normalizeQuestionTypeStatic(sample.questionType()))) {
+                return "";
+            }
+            if (focus.contains("redis") || focus.contains("redisson") || focus.contains("缓存")) {
+                return "redis";
+            }
+            if (focus.contains("mysql") || focus.contains("innodb") || focus.contains("索引")) {
+                return "mysql";
+            }
+            if (focus.contains("hashmap") || focus.contains("java")) {
+                return "java_core";
+            }
+            if (focus.contains("mq") || focus.contains("seata") || focus.contains("xid") || focus.contains("订单")) {
+                return "distributed";
+            }
+            return "";
+        }
+
+        @Override
+        public void close() throws Exception {
+            try {
+                Boolean exists = qdrantClient.collectionExistsAsync(collectionName).get(3, TimeUnit.SECONDS);
+                if (Boolean.TRUE.equals(exists)) {
+                    qdrantClient.deleteCollectionAsync(collectionName).get(5, TimeUnit.SECONDS);
+                }
+            } finally {
+                qdrantClient.close();
+            }
+        }
+
+        private static String firstNonBlank(String first, String second) {
+            if (first != null && !first.isBlank()) {
+                return first;
+            }
+            return second == null ? "" : second;
+        }
     }
 }
